Fixed nav behavour on tablet

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,7 +2,12 @@
 @import 'font awesome/font-awesome';
 @import 'partials/fonts';
 @import 'partials/variables';
-
+.green {
+  color: green;
+}
+.red {
+  color: red;
+}
 html, body {
   height: 100%;
 }
